org.metaborg.lang.tiger.example/tests/binding/binding03.tig
let
  function h() = ()
  
  var x := 1
  
  function f() : int = ( 1 )
  function f(x : int) : int = ( 1 ) // error: duplicate function declaration
   
  function g() = ()
  function g() = () // error: duplicate function declaration
  
  function h() = ()
in
  f(); h() 
end 